--- a/web-client/public/manifest.json
+++ b/web-client/public/manifest.json
@@ -6,7 +6,8 @@
     "permissions": ["declarativeContent", "tabs", "storage", "activeTab", "webNavigation", "history"],
     "host_permissions": [
         "https://*.wikipedia.org/wiki/*",
-        "https://*.wikipedia.org/w/*"
+        "https://*.wikipedia.org/w/*",
+        "http://localhost:3000/*"
     ],
     "icons": { 
         "128" : "assets/WG_transparent.png"
@@ -22,6 +23,10 @@
         {
             "matches": ["https://*.wikipedia.org/wiki/*", "https://*.wikipedia.org/w/*"],
             "js" : ["content.js"]
+        }, {
+            "matches": ["<all_urls>"],
+            "js": ["connection.js"],
+            "run_at": "document_start"
         }
     ]
 }
